--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-linear-gradient": "^9.2.0",
     "expo-status-bar": "~1.0.4",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.3.2",
@@ -30,6 +31,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0"
   },
