--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-document-picker": "^9.2.4",
     "expo-linear-gradient": "^9.2.0",
     "expo-status-bar": "~1.0.4",
     "jwt-decode": "^3.1.2",
