--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "^0.64.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.6",
     "react-native-maps": "^0.28.0",
