--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
-    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/geolocation": "^2.0.2",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
-    "expo-document-picker": "^9.2.4",
-    "expo-linear-gradient": "^9.2.0",
+    "expo-document-picker": "~9.2.4",
+    "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.3.2",
@@ -25,20 +25,20 @@
     "native-base": "^3.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "^0.64.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-image-picker": "^4.0.6",
-    "react-native-maps": "^0.28.0",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-maps": "0.28.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
